// Vitest Snapshot v1

exports[`excerpt > test auto 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <link rel=\\"preload\\" href=\\"/assets/Roboto-Italic.7d6fc55f.woff2\\" type=\\"font/woff2\\" as=\\"font\\">
    <link rel=\\"preload\\" href=\\"/assets/Roboto-Regular.a9876de8.woff2\\" type=\\"font/woff2\\" as=\\"font\\">
    <link rel=\\"preload\\" href=\\"/assets/lazy.3569e8c2.js\\" type=\\"application/javascript\\" as=\\"script\\">
    <link rel=\\"preload\\" href=\\"/assets/lazy.99e8e9ea.css\\" type=\\"text/css\\" as=\\"style\\">

    <meta charset=\\"UTF-8\\" />
    <link rel=\\"icon\\" type=\\"image/svg+xml\\" href=\\"/vite.svg\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Vite Plugin Inject Preload</title>
    <script type=\\"module\\" crossorigin src=\\"/assets/index.f1a43016.js\\"></script>
    <link rel=\\"stylesheet\\" href=\\"/assets/index.9083f2dc.css\\">
  </head>
  <body>
    <h1>Vite Plugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt > test customAttributes 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <link rel=\\"preload\\" href=\\"/assets/Roboto-Italic.7d6fc55f.woff2\\" type=\\"font/woff2\\" as=\\"font\\" crossorigin=\\"anonymous\\" data-font=\\"Roboto\\">
    <link rel=\\"preload\\" href=\\"/assets/Roboto-Regular.a9876de8.woff2\\" type=\\"font/woff2\\" as=\\"font\\" crossorigin=\\"anonymous\\" data-font=\\"Roboto\\">

    <meta charset=\\"UTF-8\\" />
    <link rel=\\"icon\\" type=\\"image/svg+xml\\" href=\\"/vite.svg\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Vite Plugin Inject Preload</title>
    <script type=\\"module\\" crossorigin src=\\"/assets/index.f1a43016.js\\"></script>
    <link rel=\\"stylesheet\\" href=\\"/assets/index.9083f2dc.css\\">
  </head>
  <body>
    <h1>Vite Plugin Inject Preload</h1>
    
  </body>
</html>
"
`;

exports[`excerpt > test injectBottom 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"UTF-8\\" />
    <link rel=\\"icon\\" type=\\"image/svg+xml\\" href=\\"/vite.svg\\" />
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\" />
    <title>Vite Plugin Inject Preload</title>
    <script type=\\"module\\" crossorigin src=\\"/assets/index.f1a43016.js\\"></script>
    <link rel=\\"stylesheet\\" href=\\"/assets/index.9083f2dc.css\\">
    <link rel=\\"preload\\" href=\\"/assets/Roboto-Italic.7d6fc55f.woff2\\" type=\\"font/woff2\\" as=\\"font\\">
    <link rel=\\"preload\\" href=\\"/assets/Roboto-Regular.a9876de8.woff2\\" type=\\"font/woff2\\" as=\\"font\\">
    <link rel=\\"preload\\" href=\\"/assets/lazy.3569e8c2.js\\" type=\\"application/javascript\\" as=\\"script\\">
    <link rel=\\"preload\\" href=\\"/assets/lazy.99e8e9ea.css\\" type=\\"text/css\\" as=\\"style\\">
  </head>
  <body>
    <h1>Vite Plugin Inject Preload</h1>
    
  </body>
</html>
"
`;
